2007-09-24  Stefan Kost  <ensonic@users.sf.net>

	patch by: David Nečas <yeti@physics.muni.cz>

	* NEWS:
	* tests/bugs/docs/Makefile.am:
	* tests/gobject/docs/Makefile.am:
	* tests/gtk-doc.make:
	  Adapt xml/ cleaning from gtk-doc.notmpl.make.  Clean log files.

2007-09-24  Stefan Kost  <ensonic@users.sf.net>

	* NEWS:
	  Current release notes.

2007-09-24  Stefan Kost  <ensonic@users.sf.net>

	* MAINTAINERS:
	  Make mango happy.

	* examples/Makefile.am:
	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	  Process files from DISTCLEANFILES in the dist-hooks.

2007-09-24  Stefan Kost  <ensonic@users.sf.net>

	patch by: David Nečas <yeti@physics.muni.cz>

	* Makefile.am:
	  Add gtk-doc.notmpl.make to EXTRA_DIST. Fixes #479913.

2007-09-20  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-fixxref.in:
	  Revert online option for fixxref now that we have a rebase command.

2007-09-18  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-scan.in:
	  Handle function pointers. Fixes #477532.

2007-09-18  Stefan Kost  <ensonic@users.sf.net>

	patch by: David Nečas <yeti@physics.muni.cz>

	* gtkdoc-scan.in:
	  Parse reoccuring const. Fixes #471014.

	* tests/bugs/docs/Makefile.am:
	* tests/bugs/docs/tester-sections.txt:
	* tests/bugs/src/tester.c:
	* tests/bugs/src/tester.h:
	* tests/gobject/docs/Makefile.am:
	* tests/gobject/src/tester.c:
	* tests/gobject/src/tester.h:
	  Add more tests and cleanup the test-code a little.

2007-09-17  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	  Revert some Makefile improvements, as we can't control the quoting
	  reliably.

2007-09-11  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Default master doc should have proper extension. Fixes #467773.

2007-09-11  Stefan Kost  <ensonic@users.sf.net>

	patch by: David Nečas <yeti@physics.muni.cz>

	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	  Makefile improvements.

2007-09-03  Stefan Kost  <ensonic@users.sf.net>

	* MAINTAINERS: